--- a/app/App/Training/Content/Exercise/Exercise/Exercise.html
+++ b/app/App/Training/Content/Exercise/Exercise/Exercise.html
@@ -8,9 +8,15 @@
 </div>
 
 <main class="container" role="main" ng-if="trainingContent.pageStatus == 'public'">
-    <div ng-include="'App/Training/tpl/training-header.html'"></div>
+    <div ng-include="'App/Training/Content/tpl/content-header.html'"></div>
 
-    <div ng-include="'App/Training/Presentation/tpl/training-presentation.html'"></div>
+    <div ui-view="transcript"></div>
+
+    <div ng-if="transcriptConfig.isValidation === false" class="alert alert-info">
+        <button class="btn btn-primary" ng-click="goToValidation()">Afficher la correction</button>
+    </div>
+
+    <div ng-include="'App/Training/Content/Exercise/tpl/training-exercise.html'"></div>
 
     <hr />
     <div ui-view="comment"></div>
