--- a/app/App/Training/Content/Presentation/tpl/training-presentation.html
+++ b/app/App/Training/Content/Presentation/tpl/training-presentation.html
@@ -1,11 +1,11 @@
 <div ng-if="trainingContent.illustration != null" class="row">
-    <div class="col-md-7" ng-include="'App/Training/Presentation/tpl/training-mainContent.html'"></div>
+    <div class="col-md-7" ng-include="'App/Training/Content/Presentation/tpl/training-mainContent.html'"></div>
     <div class="col-md-5">
         <img src="{{ trainingContent.illustration | imageRender }}" class="img-fluid" />
     </div>
 </div>
 <div ng-if="trainingContent.illustration == null" class="row">
-    <div class="col-md-10 col-12" ng-include="'App/Training/Presentation/tpl/training-mainContent.html'"></div>
+    <div class="col-md-10 col-12" ng-include="'App/Training/Content/Presentation/tpl/training-mainContent.html'"></div>
 </div>
 
 <hr />
@@ -13,8 +13,8 @@
     <div class="float-right">
         {{ trainingContent.orderInTraining }} / {{ trainingContents.length }} pages
     </div>
-    <a ng-if="trainingContent.orderInTraining-1 > 0" class="btn btn-primary" ui-sref="transcript.app.training({order: trainingContent.orderInTraining-1})"><i class="fa fa-arrow-left"></i> Page précédente</a>
+    <a ng-if="trainingContent.orderInTraining-1 > 0" class="btn btn-primary" ui-sref="transcript.app.training.content({order: trainingContent.orderInTraining-1})"><i class="fa fa-arrow-left"></i> Page précédente</a>
     <a class="btn btn-primary" ui-sref="transcript.app.home"><i class="fa fa-home"></i> Accueil</a>
-    <a ng-if="nextContent !== null" class="btn btn-primary" ui-sref="transcript.app.training({order: trainingContent.orderInTraining+1})"><i class="fa fa-arrow-right"></i> Page suivante</a>
+    <a ng-if="nextContent !== null" class="btn btn-primary" ui-sref="transcript.app.training.content({order: trainingContent.orderInTraining+1})"><i class="fa fa-arrow-right"></i> Page suivante</a>
     <button ng-if="nextContent === null" class="btn btn-primary" ng-click="endTraining()">Trouver un testament</button>
 </div>
