--- a/app/System/Comment/tpl/Thread-comments.html
+++ b/app/System/Comment/tpl/Thread-comments.html
@@ -21,7 +21,7 @@
     </div>
     <p ng-if="commentContainer.comment.state == 1" class="alert alert-warning">Ce commentaire a été supprimé par un modérateur.</p>
 </div>
-<div ng-if="threadContainer.comments.length == 0" class="alert alert-info">
+<div ng-if="threadContainer.comments.length == 0 && user !== null" class="alert alert-info">
     <p>Soyez-le premier à commencer la discussion !</p>
 </div>
 
