--- a/app/App/Training/Content/Presentation/Presentation.html
+++ b/app/App/Training/Content/Presentation/Presentation.html
@@ -12,6 +12,8 @@
 
     <div ng-include="'/webapp/app/App/Training/Content/Presentation/tpl/training-presentation.html'"></div>
 
+    <div ng-include="'/webapp/app/App/Training/Content/tpl/content-footer.html'"></div>
+
     <hr />
     <div ui-view="comment"></div>
 </main>
