--- a/app/App/User/Edit/Edit.html
+++ b/app/App/User/Edit/Edit.html
@@ -13,7 +13,7 @@
         <div class="col-md-3">
             <ul class="list-group">
                 <li class="list-group-item"><a ui-sref="transcript.app.user.changePassword({id: user.id})">Modifier mon mot de passe</a></li>
-                <li class="list-group-item"><a>Modifier mon identifiant</a></li>
+                <!--<li class="list-group-item"><a>Modifier mon identifiant</a></li>-->
                 <li class="list-group-item"><a ui-sref="transcript.app.user.avatar({id: user.id})">Modifier mon avatar</a></li>
             </ul>
         </div>
