--- a/app/System/Navbar/Navbar.html
+++ b/app/System/Navbar/Navbar.html
@@ -12,7 +12,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">transcrire</a>
                         <div class="dropdown-menu">
-                            <a><a class="dropdown-item" ui-sref="transcript.app.search"><i class="fa fa-search"></i> Rechercher</a></a>
+                            <a><a class="dropdown-item" ui-sref="transcript.app.search"><i class="fa fa-search"></i> Rechercher un testament</a></a>
                             <a><a class="dropdown-item" ui-sref="transcript.app.content({id: preferences.helpHomeContent})"><i class="fa fa-question"></i> Aide</a></a>
                         </div>
                     </li>
