--- a/app/App/Security/Register/Register.html
+++ b/app/App/Security/Register/Register.html
@@ -42,10 +42,22 @@
                         <small class="form-text text-warning" ng-if="form.password.plain !== form.password.confirmation">Le mot de passe n'est pas identique à celui précédemment saisi.</small>
                     </div>
                 </div>
+                <div class="form-group row">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-8">
+                        <div class="checkbox">
+                            <label class="custom-control custom-checkbox">
+                                <input ng-model="acceptCGU" class="custom-control-input" type="checkbox">
+                                <span class="custom-control-indicator"></span>
+                                <span class="custom-control-description">En m'inscrivant, j'accepte la <a href="#">charte d'utilisation du site et ses mentions légales</a>.</span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
                 <div class="row text-right">
                     <div class="col-12">
                         <button class="btn btn-sm" type="button"
-                                ng-disabled="!(!!form.name && !!form.email && !!form.password.plain && !!form.password.confirmation && (form.password.plain === form.password.confirmation))"
+                                ng-disabled="!(!!form.name && !!form.email && !!form.password.plain && !!form.password.confirmation && (form.password.plain === form.password.confirmation) && acceptCGU == true)"
                                 ng-class="{'btn-success': submit.success == true, 'btn-primary': submit.success != true}"
                                 ng-click="submit.action()">
                             <span ng-if="submit.success == false && submit.loading == false">Créer mon compte</span>
