--- a/app/App/Security/Check/Check.html
+++ b/app/App/Security/Check/Check.html
@@ -7,7 +7,7 @@
 </div>
 
 <main class="container" role="main">
-    <div>
+    <div class="jumbotron">
         <p>Votre inscription a bien été enregistrée.<br/>
             Vous allez recevoir dans quelques instants un mail de confirmation contenant un lien d'activation.
             Merci de cliquer sur ce lien.</p>
