--- a/app/System/Navbar/Navbar.html
+++ b/app/System/Navbar/Navbar.html
@@ -48,10 +48,10 @@
                     <a class="nav-link" ui-sref="transcript.app.security.register">s'inscrire</a> <span>|</span> <a  class="nav-link" ui-sref="transcript.app.security.login">se connecter</a>
                 </li>
                 <li ng-if="user != null" id="user-menu" class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">tableau de bord</a>
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">tableau de bord <span class="badge badge-danger" ng-if="user._embedded.unreadMessages > 0">{{ user._embedded.unreadMessages }}</span></a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" ui-sref="transcript.app.user.profile({id: user.id})">Profil</a>
-                    <a class="dropdown-item" ui-sref="transcript.app.user.private-message.list({id: user.id})">Messagerie privée</a>
+                    <a class="dropdown-item" ui-sref="transcript.app.user.private-message.list({id: user.id})">Messagerie privée <span class="badge badge-danger">{{ user._embedded.unreadMessages }}</span></a>
                     <a class="dropdown-item" ui-sref="transcript.app.training.content({order: '0'})" ng-if="user._embedded.preferences.tutorialStatus == 'todo' || user._embedded.preferences.tutorialStatus == 'done' || user._embedded.preferences.tutorialStatus == 'notInterested'">Pratiquer la TEI</a>
                     <a class="dropdown-item" ui-sref="transcript.app.training.content({order: user._embedded.preferences.tutorialProgress})" ng-if="user._embedded.preferences.tutorialStatus == 'inProgress'">Pratiquer la TEI</a>
                     <a class="dropdown-item" ui-sref="transcript.app.user.preferences({id: user.id})">Préférences</a>
