--- a/app/Admin/Entity/List/List.html
+++ b/app/Admin/Entity/List/List.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="form-group col-md-12 row">
                 <label class="col-md-12">
-                    Effectuer une recherche dans la liste
+                    Effectuer une recherche dans la liste - {{ entities.length }} résultats
                 </label>
                 <div class="col-md-6 text-right">
                     <select ng-model="fieldSearch" class="custom-select" title="Critère de recherche">
@@ -49,15 +49,15 @@
             <th><a ng-click="entitiesSorting = 'will.hostingOrganization.name'" title="Trier par institution de conservation">Institution <i class="fa fa-caret-down"></i></a></th>
             <th><a ng-click="entitiesSorting = 'will.title'" title="Trier par titre du testament">Titre <i class="fa fa-caret-down"></i></a></th>
             <th><a ng-click="entitiesSorting = 'will.willWritingYear'" title="Trier par année de rédaction du testament">Rédaction <i class="fa fa-caret-down"></i></a></th>
-            <th><a ng-click="entitiesSorting = 'will.testator.surname'" title="Trier par nom de famille du testateur">Testateur <i class="fa fa-caret-down"></i></a></th>
+            <th><a ng-click="entitiesSorting = 'will.testator.name'" title="Trier par nom de famille du testateur">Testateur <i class="fa fa-caret-down"></i></a></th>
             <th><a ng-click="entitiesSorting = '_embedded.status'" title="Trier par statut de la transcription">Statut <i class="fa fa-caret-down"></i></a></th>
         </tr>
         <tr data-ng-repeat="entity in results|limitTo:itemsPerPage:(currentPage*itemsPerPage-itemsPerPage)|orderBy:entitiesSorting">
             <td>{{ $index+1 }}</td>
-            <td>{{ entity.willNumber }}</td>
+            <td>{{ entity.willNumber | willNumberFormat:4 }}</td>
             <td>{{ entity.will.hostingOrganization.name }}</td>
             <td><a ui-sref="transcript.app.entity({id: entity.id})">{{ entity.will.title }}</a></td>
-            <td>{{ entity.will.willWritingDate }}</td>
+            <td>{{ entity.will.willWritingYear }}</td>
             <td>{{ entity.will.testator.name }}</td>
             <td><span class="badge badge-status" data-ng-class="getStatusClassLabel(entity._embedded.status)">{{ entity._embedded.status | transcriptionStatusName:entity.isShown }}</span></td>
         </tr>
