--- a/app/App/Edition/Edition.html
+++ b/app/App/Edition/Edition.html
@@ -70,3 +70,18 @@
         </div>
     </div>
 </div>
+<div id="edition-size-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal-title">
+    <div class="modal-dialog modal-transcribe" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Votre écran est trop petit...</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Malheureusement votre écran est trop petit pour afficher correctement l'interface de transcription. Nous vous invitons à revenir sur un autre terminal <i class="fa fa-smile-o"></i></p>
+            </div>
+        </div>
+    </div>
+</div>
