--- a/app/App/Taxonomy/tpl/form-testator.html
+++ b/app/App/Taxonomy/tpl/form-testator.html
@@ -63,7 +63,7 @@
 
         <div class="form-group col-md-6">
             <label for="app-entity-edit-address-city" class="form-control-label">Commune</label>
-            <select class="custom-select col-md-6" id="app-entity-edit-address-city" data-ng-model="entity.addressCity" name="app-entity-edit-address-city" data-ng-options="place.id as place.name for place in places"><option value=""></option></select>
+            <select class="custom-select col-md-6" id="app-entity-edit-address-city" data-ng-model="entity.addressCity" name="app-entity-edit-address-city" data-ng-options="place.id as place.indexName for place in places"><option value=""></option></select>
             <small class="form-text text-muted"><a ui-sref="transcript.app.taxonomy.create({type: 'places'})" target="_blank">Ajouter une commune</a> - <a ng-click="reload.action('places')">Recharger la liste <i class="fa fa-spin fa-circle-o-notch" ng-if="reload.places === true"></i></a></small>
         </div>
     </div>
@@ -113,7 +113,7 @@
         </div>
         <div class="form-group col-md-6">
             <label for="app-entity-edit-placeOfBirthNormalized" class="form-control-label">Commune</label>
-            <select class="custom-select form-control form-control-sm" id="app-entity-edit-placeOfBirthNormalized" ng-model="entity.placeOfBirthNormalized" name="app-entity-edit-placeOfBirthNormalized" ng-options="place.id as place.name for place in places"><option value=""></option></select>
+            <select class="custom-select form-control form-control-sm" id="app-entity-edit-placeOfBirthNormalized" ng-model="entity.placeOfBirthNormalized" name="app-entity-edit-placeOfBirthNormalized" ng-options="place.id as place.indexName for place in places"><option value=""></option></select>
             <small class="form-text text-muted"><a ui-sref="transcript.app.taxonomy.create({type: 'places'})" target="_blank">Ajouter une commune</a> - <a ng-click="reload.action('places')">Recharger la liste <i class="fa fa-spin fa-circle-o-notch" ng-if="reload.places === true"></i></a></small>
         </div>
     </div>
@@ -155,7 +155,7 @@
         </div>
         <div class="form-group col-md-6">
             <label for="app-entity-edit-placeOfDeathNormalized" class="form-control-label">Commune</label>
-            <select class="custom-select form-control form-control-sm" id="app-entity-edit-placeOfDeathNormalized" ng-model="entity.placeOfDeathNormalized" name="app-entity-edit-placeOfDeathNormalized" ng-options="place.id as place.name for place in places"><option value=""></option></select>
+            <select class="custom-select form-control form-control-sm" id="app-entity-edit-placeOfDeathNormalized" ng-model="entity.placeOfDeathNormalized" name="app-entity-edit-placeOfDeathNormalized" ng-options="place.id as place.indexName for place in places"><option value=""></option></select>
             <small class="form-text text-muted"><a ui-sref="transcript.app.taxonomy.create({type: 'places'})" target="_blank">Ajouter une commune</a> - <a ng-click="reload.action('places')">Recharger la liste <i class="fa fa-spin fa-circle-o-notch" ng-if="reload.places === true"></i></a></small>
         </div>
     </div>
